# yoink

./: .gitignore  LICENSE  README.md  SECURITY.md  download.py  pyproject.toml
.github/workflows/: publish.yml
src/yoink/core/: engine.py  errors.py  extractor.py  manager.py  models.py
src/yoink/mcp_server/: server.py
src/yoink/tui/: app.py  logo.py
src/yoink/tui/screens/: format_select.py  main_screen.py
src/yoink/tui/styles/: app.tcss
src/yoink/tui/widgets/: download_item.py  download_queue.py  playlist_panel.py  url_bar.py  video_info_panel.py
tests/: test_engine.py  test_errors.py  test_extractor.py  test_manager.py  test_models.py
