[project]
name = "yoink"
version = "0.1.0"
description = "Yoink videos off YouTube. Fast TUI + MCP server."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "yt-dlp>=2024.0.0",
    "textual>=1.0.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
yoink = "yoink.tui.app:main"
yoink-mcp = "yoink.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoink"]
