[project]
name = "yoink-yt"
version = "0.1.0"
description = "Yoink videos off YouTube. Fast TUI + MCP server."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Jaysh Khan"},
]
keywords = ["youtube", "downloader", "tui", "yt-dlp", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2024.0.0",
    "textual>=1.0.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/JayshKhan/yoink"
Repository = "https://github.com/JayshKhan/yoink"
Issues = "https://github.com/JayshKhan/yoink/issues"

[project.scripts]
yoink = "yoink.tui.app:main"
yoink-mcp = "yoink.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoink"]
